fixed header menu button z-index

--- a/css/main.scss
+++ b/css/main.scss
@@ -38,6 +38,8 @@ $dark-red: #490406;
 	opacity: .8;
 	float: right;
 	padding: 15px 2% 0;
+	position: relative;
+	z-index: 10000;
 }
 
 
